--- a/src/index.css
+++ b/src/index.css
@@ -111,7 +111,7 @@ code {
   width: 80%;
 }
 
-/* The Close Button
+The Close Button
 .close {
   color: #aaaaaa;
   float: right;
@@ -124,9 +124,9 @@ code {
   color: #000;
   text-decoration: none;
   cursor: pointer;
-} */
+}
 
-.Modal {
+/* .Modal {
     position: fixed;
     z-index: 500;
     background-color: white;
@@ -145,7 +145,7 @@ code {
         width: 500px;
         left: calc(50% - 250px);
     }
-}
+} */
 
 .client-tr:hover {
   cursor: pointer;
