update map, remove logger

--- a/src/index.css
+++ b/src/index.css
@@ -188,6 +188,7 @@ button:focus { outline:0 !important; }
   width: 150px;
 }
 
-#modal-col-right {
-  
+.warning {
+  width: 75%;
+  text-align: center;
 }
